--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
+    "@types/ramda": "^0.27.44",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vitejs/plugin-vue": "^1.3.0",
@@ -42,6 +43,7 @@
     "sass-loader": "^8.0.2",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vue-i18n": "^9.1.7",
     "vue-jest": "^5.0.0-0",
     "vue-tsc": "^0.2.2"
   }
