--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vitebuild": "vue-tsc --noEmit && vite build",
     "viteserve": "vite preview",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+    "tsc":"tsc -t ESNext /src/utils/EditableTable.ts"
   },
   "dependencies": {
     "core-js": "^3.6.5",
