--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "*",
     "ramda": "^0.27.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.0-0",
